# sidekiq-rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: Procfile  consumer-demo.rs  demo.rs  namespaced_demo.rs  producer-demo.rs  unique.rs
examples/synergy/: Procfile  README.md
examples/synergy/rubies/: Gemfile  Procfile  app.rb  config.ru
examples/synergy/rustic/: Cargo.toml
examples/synergy/rustic/src/: main.rs
src/: cron.rs  lib.rs  main.rs  middleware.rs  periodic.rs  processor.rs  redis.rs  scheduled.rs  stats.rs
tests/: process_async_test.rs  process_cron_job_test.rs  process_scheduled_job_test.rs  process_unique_job_test.rs  server_middleware_test.rs
website/: index.html
