[package]
name = "rusty-sidekiq"
version = "0.3.0"
edition = "2021"
description = "A rust sidekiq server and client using tokio"
authors = ["Garrett Thornburg <garrett.thornburg@hey.com>"]
homepage = "https://github.com/film42/sidekiq-rs"
repository = "https://github.com/film42/sidekiq-rs.git"
keywords = ["sidekiq", "worker", "tokio", "ruby"]
license = "MIT"
readme = "README.md"

[lib]
name = "sidekiq"

[dependencies]
tokio = { version = "1", features = ["full"]} 
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.21", features = ["aio", "default", "tokio-comp"] }
async-trait = "0.1"
slog = "2.7"
slog-term = "2.9"
bb8-redis = "0.10"
num_cpus = "1.13"
chrono = "0.4"
rand = "0.8"
hex = "0.4"
heck = "0.4"
cron_clock = "0.8.0"
