[package]
name = "rusty-sidekiq"
version = "0.7.4"
edition = "2021"
description = "A rust sidekiq server and client using tokio"
authors = ["Garrett Thornburg <garrett.thornburg@hey.com>"]
homepage = "https://github.com/film42/sidekiq-rs"
repository = "https://github.com/film42/sidekiq-rs.git"
keywords = ["sidekiq", "worker", "tokio", "ruby"]
license = "MIT"
readme = "README.md"

[lib]
name = "sidekiq"

[dependencies]
gethostname = "0.2"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.22", features = ["aio", "default", "tokio-comp"] }
async-trait = "0.1.74"
slog-term = "2.9"
thiserror = "*"
bb8 = "0.8"
num_cpus = "1.13"
chrono = "0.4"
rand = "0.8"
hex = "0.4"
heck = "0.4"
cron_clock = "0.8.0"
simple-process-stats = "1.0.0"
sha2 = "0.10.6"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
