[package]
name = "rusty-sidekiq"
version = "0.8.2"
edition = "2021"
description = "A rust sidekiq server and client using tokio"
authors = ["Garrett Thornburg <garrett.thornburg@hey.com>"]
homepage = "https://github.com/film42/sidekiq-rs"
repository = "https://github.com/film42/sidekiq-rs.git"
keywords = ["sidekiq", "worker", "tokio", "ruby"]
license = "MIT"
readme = "README.md"

[features]
default = ["rss-stats"]

# There is currently a dependency bug for mac in the `darwin-libproc` crate making it so
# cargo cannot resolve deps. Once resolved we may choose to remove this feature flag.
rss-stats = ["dep:simple-process-stats"]

[lib]
name = "sidekiq"

[dependencies]
gethostname = "0.2"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.22", features = ["aio", "default", "tokio-comp"] }
async-trait = "0.1.74"
slog-term = "2.9"
thiserror = "1.0"
bb8 = "0.8"
num_cpus = "1.13"
chrono = "0.4"
rand = "0.8"
hex = "0.4"
cron_clock = "0.8.0"
simple-process-stats = { version = "1.0.0", optional = true }
sha2 = "0.10.6"
convert_case = "0.6.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
